samples/_failures_safe/1761633134_51cd59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5215854a.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_5215854a.c:165:37: error: missing terminating " character
  165 |         case TOKEN_OPERATOR: printf("OPER
      |                                     ^~~~~
./samples/SAFE/__tmp_5215854a.c:165:9: error: expected expression at end of input
  165 |         case TOKEN_OPERATOR: printf("OPER
      |         ^~~~
./samples/SAFE/__tmp_5215854a.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5215854a.c:165:9: error: expected declaration or statement at end of input
